--- a/index.html
+++ b/index.html
@@ -1,269 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="p:domain_verify" content="8321ea95439865f74f0ee4a55a1aca4d" />
-  <title>Fleura Co</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Fleura Co</title>
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Noto+Serif+Display:wght@400&family=The+Seasons&display=swap" rel="stylesheet" />
+<style>
+    body {
+        font-family: "Inter", sans-serif;
+        background-color: #faf9f7;
+        margin: 0;
+        padding: 0;
+        color: #3a3a3a;
+        text-align: center;
+    }
 
-  <style>
-    body, html {
-      margin: 0;
-      padding: 0;
-      min-height: 100vh;
-      font-family: 'Inter', sans-serif;
-      background-image: url('background.jpg');
-      background-size: cover;
-      background-position: center;
-      background-attachment: fixed;
+    /* Fade-in animation */
+    .fade {
+        opacity: 0;
+        animation: fadeIn 1.2s ease forwards;
+    }
+    @keyframes fadeIn {
+        from { opacity: 0; transform: translateY(8px); }
+        to { opacity: 1; transform: translateY(0); }
     }
 
     .container {
-      background: rgba(255, 255, 255, 0.92);
-      border: 2px solid #d8d1c4;
-      border-radius: 14px;
-      padding: 50px 40px;
-      width: 420px;
-      max-width: 95vw;
-      margin: 60px auto;
-      text-align: center;
-      box-sizing: border-box;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
-      opacity: 0;
-      transform: translateY(30px);
-      animation: fadeInUp 1s ease-out forwards;
-    }
-
-    @keyframes fadeInUp {
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    .logo {
-      width: 110px;
-      height: 110px;
-      object-fit: contain;
-      margin: 0 auto 20px auto;
-      display: block;
+        max-width: 560px;
+        margin: 0 auto;
+        padding: 40px 20px;
     }
 
     h1 {
-      margin: 0 0 8px 0;
-      font-family: 'The Seasons', serif;
-      font-size: 2.4rem;
-      font-weight: 600;
-      color: #000;
-      letter-spacing: 2px;
+        font-size: 1.9rem;
+        margin-bottom: 6px;
+        font-weight: 600;
     }
 
-    .subheading {
-      font-family: 'Noto Serif Display', serif;
-      font-size: 1rem;
-      color: #6b6258;
-      margin-bottom: 22px;
-      letter-spacing: 1px;
+    .subtext {
+        font-size: 1.05rem;
+        line-height: 1.55;
+        margin-bottom: 28px;
+        font-style: italic;
+        color: #4a4a4a;
     }
 
-    /* Intro description restored + italic soft serif */
-    .welcome-text {
-      font-family: 'Noto Serif Display', serif;
-      font-style: italic;
-      font-size: 0.97rem;
-      color: #4a433c;
-      margin-bottom: 25px;
-      line-height: 1.6;
+    .pill {
+        display: inline-block;
+        background: #ebe7e2;
+        padding: 10px 18px;
+        border-radius: 999px;
+        font-size: 0.95rem;
+        margin-bottom: 32px;
     }
 
-    /* Value bubble */
-    .value-preview {
-      font-size: 0.9rem;
-      color: #5a534b;
-      font-family: 'Noto Serif Display', serif;
-      background: #f6f2ed;
-      padding: 14px;
-      border-radius: 10px;
-      margin-bottom: 30px;
-      border: 1px solid #e6ded6;
-      line-height: 1.5;
+    /* Section blocks */
+    .section {
+        background: white;
+        padding: 22px 26px;
+        border-radius: 14px;
+        margin-bottom: 26px;
+        box-shadow: 0 1px 3px rgba(0,0,0,0.06);
+        text-align: left;
     }
 
-    .nav {
-      display: flex;
-      justify-content: center;
-      gap: 28px;
-      margin-bottom: 28px;
-      border-bottom: 1px solid #e0dcd7;
-      padding-bottom: 8px;
+    .section h2 {
+        font-size: 1.2rem;
+        margin-bottom: 8px;
+        font-weight: 600;
     }
 
-    .nav a {
-      text-decoration: none;
-      color: #444;
-      font-weight: 500;
-      position: relative;
-      padding-bottom: 4px;
-      transition: color 0.3s ease;
+    .section p {
+        font-size: 0.95rem;
+        line-height: 1.55;
     }
 
-    .nav a::after {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 0%;
-      height: 2px;
-      background-color: #bfa98e;
-      transition: width 0.3s ease;
-    }
-
-    .nav a:hover { color: #000; }
-    .nav a:hover::after { width: 100%; }
-    .nav a.active::after { width: 100%; }
-
-    /* Button styling with neutral icons + spacing */
+    /* Buttons */
     .btn {
-      background-color: #ebe3da;
-      color: #000;
-      text-decoration: none;
-      padding: 14px 18px;
-      border-radius: 8px;
-      font-size: 1.05rem;
-      font-weight: 500;
-      transition: background-color 0.3s ease, transform 0.2s ease;
-      display: block;
-      margin-bottom: 12px;
-      letter-spacing: 0.3px;
+        display: block;
+        padding: 12px 0;
+        margin: 10px 0;
+        width: 100%;
+        border-radius: 10px;
+        font-size: 1rem;
+        text-decoration: none;
+        font-weight: 500;
+        transition: 0.25s;
+    }
+
+    .btn-primary {
+        background: #d6cfc6;
+        color: #2f2f2f;
+    }
+
+    .btn-outline {
+        border: 1.5px solid #bfb7ad;
+        color: #3a3a3a;
+        background: transparent;
     }
 
     .btn:hover {
-      background-color: #e3d9ce;
-      transform: scale(1.02);
+        opacity: 0.85;
     }
 
-    /* Freebie box */
-    .freebie-box {
-      background: #f8f5f1;
-      border: 1px solid #e0dcd7;
-      padding: 18px;
-      border-radius: 10px;
-      margin-bottom: 35px;
+    .step-label {
+        font-size: 0.82rem;
+        text-transform: uppercase;
+        letter-spacing: 1.2px;
+        opacity: 0.65;
+        margin-bottom: 6px;
     }
 
-    .freebie-title {
-      font-family: 'Noto Serif Display', serif;
-      color: #4a423b;
-      font-size: 1.1rem;
-      margin-bottom: 10px;
+    .icon {
+        opacity: 0.85;
     }
+</style>
 
-    /* Newsletter block */
-    .substack-block {
-      margin-top: 35px;
-      background: #f4efe9;
-      padding: 18px;
-      border-radius: 12px;
-      border: 1px solid #dfd9d1;
-    }
-
-    .newsletter-title {
-      font-family:'Noto Serif Display', serif;
-      font-size:1rem;
-      margin-bottom:10px;
-      color:#4a423b;
-    }
-
-    .newsletter-text {
-      font-size:0.9rem;
-      color:#5a534b;
-      margin-bottom:15px;
-      line-height:1.4;
-    }
-
-    .newsletter-btn {
-      background-color: #dcd2c7;
-      padding: 12px 16px;
-      border-radius: 8px;
-      font-size: 1.02rem;
-      text-decoration: none;
-      color: #000;
-      display: inline-block;
-      transition: 0.3s;
-      font-weight: 500;
-      letter-spacing: 0.3px;
-    }
-
-    .newsletter-btn:hover {
-      background-color: #d3c8bb;
-      transform: scale(1.02);
-    }
-
-    footer {
-      margin-top: 35px;
-      font-size: 0.85rem;
-      color: #777;
-      font-family: 'Noto Serif Display', serif;
-    }
-
-    @media (max-width: 400px) {
-      .container { padding: 30px 20px; width: 90vw; }
-      h1 { font-size: 2rem; }
-      .subheading { font-size: 0.9rem; }
-      .btn { font-size: 1rem; padding: 13px 15px; }
-      .logo { width: 90px; height: 90px; margin-bottom: 15px; }
-      .nav { gap: 20px; }
-    }
-  </style>
 </head>
-
 <body>
-  <div class="container">
-    <img src="Black%20Circle%20Modern%20Nails%20Studio%20Logo.png" alt="Fleura Co Logo" class="logo" />
-    <h1>Fleura Co</h1>
-    <p class="subheading">soft productivity • digital systems • intentional living</p>
+<div class="container fade">
 
-    <div class="nav">
-      <a href="index.html" class="active">Home</a>
-      <a href="product.html">Free Templates</a>
-    </div>
+    <!-- Title -->
+    <h1>Fleura Co 🌷</h1>
 
-    <!-- Restored intro -->
-    <p class="welcome-text">
-      Welcome to Fleura Co 🌷  
-      A calm space for soft productivity, mindful organisation, and beautiful digital systems.  
-      Discover thoughtfully designed Notion templates and tools to help you plan, reset, and stay grounded with ease.
+    <!-- Soft intro text -->
+    <p class="subtext">
+        A calm space for soft productivity, mindful organisation, and beautiful digital systems.
+        Thoughtfully crafted tools to help you plan, reset, and grow gently.
     </p>
 
-    <div class="value-preview">
-      Tools for gentle planning, weekly resets, clarity, and slow intentional growth.
+    <!-- Pill description -->
+    <div class="pill">simple systems • soft productivity • digital planning</div>
+
+
+    <!-- STEP 1 — FREE TEMPLATE -->
+    <div class="section fade">
+        <div class="step-label">Step 1</div>
+        <h2>🌿 Free Weekly Reset Template</h2>
+        <p>A simple, calming system to reset your week with clarity.</p>
+        <a href="[YOUR-LINK-HERE]" class="btn btn-primary">Claim Yours Free</a>
     </div>
 
-    <!-- Freebie CTA -->
-    <div class="freebie-box">
-      <div class="freebie-title">Weekly Reset Template (Free)</div>
-      <p style="font-size:0.9rem; color:#5a534b; margin-bottom:15px;">
-        A soft, grounding reset ritual for your week.
-      </p>
-      <a href="product.html" class="btn">Download Free Template</a>
+
+    <!-- STEP 2 — NEWSLETTER -->
+    <div class="section fade">
+        <div class="step-label">Step 2</div>
+        <h2>💌 Join the Weekly Newsletter</h2>
+        <p>Gentle insights, resets, and soft productivity, delivered with calm intention.</p>
+        <a href="[SUBSTACK-LINK]" class="btn btn-outline">Subscribe</a>
     </div>
 
-    <!-- Buttons with neutral icons -->
-    <a href="https://fleuraco.gumroad.com/" class="btn" target="_blank">🗂 Template Library</a>
-    <a href="https://www.instagram.com/fleuracodigitals/" class="btn" target="_blank">✧ Instagram</a>
-    <a href="https://au.pinterest.com/fleuracodigitals/" class="btn" target="_blank">✧ Pinterest</a>
 
-    <!-- Newsletter -->
-    <div class="substack-block">
-      <p class="newsletter-title">Join the Weekly Newsletter</p>
-      <p class="newsletter-text">
-        A quiet space for clarity, gentle routines, and thoughtful reset moments — directly to your inbox.
-      </p>
-      <a href="https://fleuraco.substack.com/" class="newsletter-btn" target="_blank">Join Now</a>
+    <!-- STEP 3 — EXPLORE LINKS -->
+    <div class="section fade">
+        <div class="step-label">Step 3</div>
+        <h2>✨ Explore More</h2>
+
+        <a href="[YOUR-TEMPLATE-LIBRARY]" class="btn btn-outline">
+            📁 Template Library
+        </a>
+
+        <a href="https://www.instagram.com/fleuracodigitals/" class="btn btn-outline">
+            📷 Instagram
+        </a>
+
+        <a href="https://au.pinterest.com/fleuracodigitals/" class="btn btn-outline">
+            📌 Pinterest
+        </a>
+
+        <a href="https://fleuraco.substack.com/" class="btn btn-outline">
+            📨 Substack
+        </a>
     </div>
 
-    <footer>crafted with care ✿</footer>
-  </div>
+</div>
 </body>
 </html>
 
