--- a/index.html
+++ b/index.html
@@ -1,271 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="p:domain_verify" content="8321ea95439865f74f0ee4a55a1aca4d" />
   <title>Fleura Co</title>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Noto+Serif+Display:wght@400&family=The+Seasons&display=swap" rel="stylesheet" />
 
   <style>
-    body, html {
-      margin: 0;
-      padding: 0;
-      min-height: 100vh;
-      font-family: 'Inter', sans-serif;
-      background-image: url('background.jpg');
-      background-size: cover;
-      background-position: center;
-      background-attachment: fixed;
+    /* === Base (keeps your original aesthetic) === */
+    :root{
+      --bg: #ffffff;
+      --muted: #6b6258;
+      --accent: #d8cfc2;
+      --panel: rgba(255,255,255,0.92);
+      --text: #444444;
+      --soft: #f6f2ed;
     }
 
+    html,body{height:100%; margin:0; background-image:url('background.jpg'); background-size:cover; background-position:center; background-attachment:fixed; font-family: 'Inter', sans-serif; color:var(--text);}
+
     .container {
-      background: rgba(255, 255, 255, 0.92);
+      background: var(--panel);
       border: 2px solid #d8d1c4;
       border-radius: 14px;
       padding: 50px 40px;
-      width: 420px;
+      width: 720px;
       max-width: 95vw;
       margin: 60px auto;
       text-align: center;
       box-sizing: border-box;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
-      opacity: 0;
-      transform: translateY(30px);
-      animation: fadeInUp 1s ease-out forwards;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.06);
+      animation: fadeInUp 0.9s ease-out both;
     }
 
     @keyframes fadeInUp {
-      to { opacity: 1; transform: translateY(0); }
+      from { opacity: 0; transform: translateY(20px); }
+      to   { opacity: 1; transform: translateY(0); }
     }
 
-    .logo {
-      width: 110px;
-      height: 110px;
-      object-fit: contain;
-      margin: 0 auto 20px auto;
-      display: block;
-    }
+    .logo { width:110px; height:110px; object-fit:contain; display:block; margin:0 auto 18px; }
 
-    h1 {
-      margin: 0 0 8px 0;
-      font-family: 'The Seasons', serif;
-      font-size: 2.4rem;
-      font-weight: 600;
-      color: #000;
-      letter-spacing: 2px;
-    }
+    h1 { margin:0 0 8px 0; font-family: 'The Seasons', serif; font-size:2.6rem; letter-spacing:2px; font-weight:600; color:#000; }
+    .subheading { font-family: 'Noto Serif Display', serif; font-size:1rem; color:var(--muted); margin-bottom:18px; }
 
-    .subheading {
-      font-family: 'Noto Serif Display', serif;
-      font-size: 1rem;
-      color: #6b6258;
-      margin-bottom: 22px;
-      letter-spacing: 1px;
-    }
-
-    /* Intro description restored + italic soft serif */
-    .welcome-text {
+    /* intro paragraph — italic like you wanted */
+    .intro {
       font-family: 'Noto Serif Display', serif;
       font-style: italic;
-      font-size: 0.97rem;
-      color: #4a433c;
-      margin-bottom: 25px;
-      line-height: 1.6;
+      font-size:0.98rem;
+      color:#4a433c;
+      margin-bottom:20px;
+      line-height:1.6;
     }
 
-    /* Value bubble */
-    .value-preview {
-      font-size: 0.9rem;
-      color: #5a534b;
-      font-family: 'Noto Serif Display', serif;
-      background: #f6f2ed;
-      padding: 14px;
-      border-radius: 10px;
-      margin-bottom: 30px;
-      border: 1px solid #e6ded6;
-      line-height: 1.5;
-    }
-
-    .nav {
-      display: flex;
-      justify-content: center;
-      gap: 28px;
-      margin-bottom: 28px;
-      border-bottom: 1px solid #e0dcd7;
-      padding-bottom: 8px;
-    }
-
-    .nav a {
-      text-decoration: none;
-      color: #444;
-      font-weight: 500;
-      position: relative;
-      padding-bottom: 4px;
-      transition: color 0.3s ease;
-    }
-
-    .nav a::after {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 0%;
-      height: 2px;
-      background-color: #bfa98e;
-      transition: width 0.3s ease;
-    }
-
-    .nav a:hover { color: #000; }
-    .nav a:hover::after { width: 100%; }
-    .nav a.active::after { width: 100%; }
-
-    /* Button styling with neutral icons + spacing */
-    .btn {
-      background-color: #ebe3da;
-      color: #000;
-      text-decoration: none;
-      padding: 14px 18px;
-      border-radius: 8px;
-      font-size: 1.05rem;
-      font-weight: 500;
-      transition: background-color 0.3s ease, transform 0.2s ease;
-      display: block;
-      margin-bottom: 12px;
-      letter-spacing: 0.3px;
-    }
-
-    .btn:hover {
-      background-color: #e3d9ce;
-      transform: scale(1.02);
-    }
-
-    /* Freebie box */
-    .freebie-box {
-      background: #f8f5f1;
-      border: 1px solid #e0dcd7;
-      padding: 18px;
-      border-radius: 10px;
-      margin-bottom: 35px;
-    }
-
-    .freebie-title {
-      font-family: 'Noto Serif Display', serif;
-      color: #4a423b;
-      font-size: 1.1rem;
-      margin-bottom: 10px;
-    }
-
-    /* Newsletter block */
-    .substack-block {
-      margin-top: 35px;
-      background: #f4efe9;
-      padding: 18px;
-      border-radius: 12px;
-      border: 1px solid #dfd9d1;
-    }
-
-    .newsletter-title {
-      font-family:'Noto Serif Display', serif;
-      font-size:1rem;
-      margin-bottom:10px;
-      color:#4a423b;
-    }
-
-    .newsletter-text {
-      font-size:0.9rem;
+    .value {
+      background: var(--soft);
+      border:1px solid #e6ded6;
+      padding:14px;
+      border-radius:10px;
       color:#5a534b;
-      margin-bottom:15px;
-      line-height:1.4;
+      font-family:'Noto Serif Display', serif;
+      margin-bottom:26px;
     }
 
-    .newsletter-btn {
-      background-color: #dcd2c7;
-      padding: 12px 16px;
-      border-radius: 8px;
-      font-size: 1.02rem;
-      text-decoration: none;
-      color: #000;
-      display: inline-block;
-      transition: 0.3s;
-      font-weight: 500;
-      letter-spacing: 0.3px;
-    }
+    /* top nav */
+    .nav { display:flex; justify-content:center; gap:28px; margin-bottom:18px; border-bottom:1px solid #e7e2db; padding-bottom:12px; }
+    .nav a { color:var(--text); text-decoration:none; font-weight:500; position:relative; padding-bottom:6px; }
+    .nav a.active::after{ content:''; position:absolute; left:0; bottom:-2px; height:2px; width:100%; background:#bfa98e; border-radius:2px; }
 
-    .newsletter-btn:hover {
-      background-color: #d3c8bb;
-      transform: scale(1.02);
-    }
+    /* step sections (keeps your original block look but clearer spacing) */
+    .step { text-align:left; background: white; padding:20px 22px; border-radius:12px; margin-bottom:18px; box-shadow:0 3px 10px rgba(0,0,0,0.04); }
+    .step .label { font-family: Inter, sans-serif; font-size:0.78rem; text-transform:uppercase; letter-spacing:1px; color:#8b847b; margin-bottom:6px; }
+    .step h2 { margin:6px 0 8px 0; font-family:'Noto Serif Display', serif; font-size:1.15rem; color:#35302b; }
+    .step p { margin:0 0 12px 0; color:#5a534b; font-size:0.95rem; line-height:1.45; }
 
-    footer {
-      margin-top: 35px;
-      font-size: 0.85rem;
-      color: #777;
-      font-family: 'Noto Serif Display', serif;
-    }
+    /* CTA buttons (wider spacing) */
+    .cta { display:block; width:100%; text-align:center; padding:12px 14px; border-radius:10px; text-decoration:none; font-weight:600; margin-top:6px; display:inline-block; }
+    .cta-primary { background:var(--accent); color:#121212; border: none; }
+    .cta-outline { background:transparent; border:1.4px solid #d1c7bd; color:#3a3a3a; }
 
-    @media (max-width: 400px) {
-      .container { padding: 30px 20px; width: 90vw; }
-      h1 { font-size: 2rem; }
-      .subheading { font-size: 0.9rem; }
-      .btn { font-size: 1rem; padding: 13px 15px; }
-      .logo { width: 90px; height: 90px; margin-bottom: 15px; }
-      .nav { gap: 20px; }
+    /* Explore group buttons layout */
+    .explore-grid { display:flex; gap:12px; flex-wrap:wrap; margin-top:6px; }
+    .explore-grid a { flex:1 1 calc(33.333% - 8px); min-width:140px; text-decoration:none; padding:10px; border-radius:8px; border:1px solid #eee; color:#3a3a3a; background:#fff; font-weight:500; }
+
+    /* small helper text under the explore */
+    .follow-note { margin-top:10px; font-size:0.9rem; color:#7b756f; }
+
+    footer { margin-top:20px; font-family:'Noto Serif Display', serif; color:#7a746e; font-size:0.9rem; }
+
+    /* responsive */
+    @media (max-width:640px){
+      .container{ padding:36px 20px; width:92vw; margin:28px auto; }
+      h1{ font-size:2.1rem; }
+      .explore-grid a{ flex-basis:100%; }
     }
   </style>
 </head>
-
 <body>
-  <div class="container">
-    <img src="Black%20Circle%20Modern%20Nails%20Studio%20Logo.png" alt="Fleura Co Logo" class="logo" />
-    <h1>Fleura Co</h1>
-    <p class="subheading">soft productivity • digital systems • intentional living</p>
 
+  <div class="container">
+    <!-- logo + header -->
+    <img class="logo" src="Black%20Circle%20Modern%20Nails%20Studio%20Logo.png" alt="Fleura Co logo" />
+    <h1>Fleura Co</h1>
+    <div class="subheading">soft productivity • digital systems • intentional living</div>
+
+    <!-- nav (top) -->
     <div class="nav">
       <a href="index.html" class="active">Home</a>
       <a href="product.html">Free Templates</a>
     </div>
 
-    <!-- Restored intro -->
-    <p class="welcome-text">
-      Welcome to Fleura Co 🌷  
-      A calm space for soft productivity, mindful organisation, and beautiful digital systems.  
-      Discover thoughtfully designed Notion templates and tools to help you plan, reset, and stay grounded with ease.
+    <!-- intro (restored wording you liked) -->
+    <p class="intro">Welcome to Fleura Co 🌷
+      A calm space for soft productivity, mindful organisation, and beautiful digital systems. Discover thoughtfully designed Notion templates and tools to help you plan, reset, and stay grounded with ease.
     </p>
 
-    <div class="value-preview">
-      Tools for gentle planning, weekly resets, clarity, and slow intentional growth.
+    <!-- small value bubble -->
+    <div class="value">Tools for gentle planning, weekly resets, clarity, and slow intentional growth.</div>
+
+    <!-- STEP 1 -->
+    <div class="step">
+      <div class="label">Step 1</div>
+      <h2>🌿 Explore free planners</h2>
+      <p>Download gentle, ready-to-use templates to reset your week and organise your days.</p>
+      <!-- link to your product page / kit landing -->
+      <a class="cta cta-primary" href="product.html">Download the Weekly Reset (Free)</a>
     </div>
 
-    <!-- Freebie CTA -->
-    <div class="freebie-box">
-      <div class="freebie-title">Weekly Reset Template (Free)</div>
-      <p style="font-size:0.9rem; color:#5a534b; margin-bottom:15px;">
-        A soft, grounding reset ritual for your week.
-      </p>
-      <a href="product.html" class="btn">Download Free Template</a>
+    <!-- STEP 2 -->
+    <div class="step">
+      <div class="label">Step 2</div>
+      <h2>💌 Join the Weekly Newsletter</h2>
+      <p>Gentle insights, reset tips, and soft productivity reads delivered to your inbox.</p>
+      <!-- substack join -->
+      <a class="cta cta-outline" href="https://fleuraco.substack.com/" target="_blank" rel="noopener">Join the Newsletter</a>
     </div>
 
-    <!-- Buttons with neutral icons -->
-    <a href="https://fleuraco.gumroad.com/" class="btn" target="_blank">🗂 Template Library</a>
-    <a href="https://www.instagram.com/fleuracodigitals/" class="btn" target="_blank">✧ Instagram</a>
-    <a href="https://au.pinterest.com/fleuracodigitals/" class="btn" target="_blank">✧ Pinterest</a>
+    <!-- STEP 3 -->
+    <div class="step">
+      <div class="label">Step 3</div>
+      <h2>✨ Explore</h2>
+      <p style="margin-bottom:8px;">More ways to browse Fleura Co — templates, daily tips, and visual inspiration. Follow on Instagram for soft productivity and resets.</p>
 
-    <!-- Newsletter -->
-    <div class="substack-block">
-      <p class="newsletter-title">Join the Weekly Newsletter</p>
-      <p class="newsletter-text">
-        A quiet space for clarity, gentle routines, and thoughtful reset moments — directly to your inbox.
-      </p>
-      <a href="https://fleuraco.substack.com/" class="newsletter-btn" target="_blank">Join Now</a>
+      <div class="explore-grid">
+        <a href="https://fleuraco.gumroad.com/" target="_blank" rel="noopener">Template Library</a>
+        <a href="https://au.pinterest.com/fleuracodigitals/" target="_blank" rel="noopener">Pinterest</a>
+        <a href="https://www.instagram.com/fleuracodigitals/" target="_blank" rel="noopener">Instagram</a>
+      </div>
     </div>
 
     <footer>crafted with care ✿</footer>
   </div>
+
 </body>
 </html>
+
 
 
 
