--- a/index.html
+++ b/index.html
@@ -1,161 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Fleura Co</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Fleura Co</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Noto+Serif+Display:wght@400;500&family=The+Seasons&display=swap" rel="stylesheet">
+<style>
+  :root{
+    --bg-panel: rgba(255,255,255,0.92);
+    --muted: #6b6258;
+    --accent: #d8cfc2; /* soft beige */
+    --accent-dark: #bfa98e; /* darker brown */
+    --text: #3d3a38;
+    --soft-bg: #f6f2ed;
+    --btn-brown: #e8ded1;
+  }
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Noto+Serif+Display:wght@400&family=The+Seasons&display=swap" rel="stylesheet" />
+  *{box-sizing:border-box}
+  html,body{height:100%; margin:0; background-image:url('background.jpg'); background-size:cover; background-position:center; font-family:'Inter',sans-serif; color:var(--text); -webkit-font-smoothing:antialiased}
+  .container{
+    width:720px; max-width:95vw; margin:60px auto; padding:50px 40px;
+    background:var(--bg-panel); border-radius:14px; border:2px solid #d8d1c4;
+    box-shadow:0 6px 20px rgba(0,0,0,0.06);
+    overflow:visible;
+    transform:translateY(10px);
+    animation:containerIn 520ms ease forwards;
+  }
+  @keyframes containerIn{ from{opacity:0; transform:translateY(20px)} to{opacity:1; transform:translateY(0)} }
 
-  <style>
-    /* === Base (keeps your original aesthetic) === */
-    :root{
-      --bg: #ffffff;
-      --muted: #6b6258;
-      --accent: #d8cfc2;
-      --panel: rgba(255,255,255,0.92);
-      --text: #444444;
-      --soft: #f6f2ed;
-    }
+  .logo{ width:110px; height:110px; object-fit:contain; display:block; margin:0 auto 18px }
+  h1{font-family:'The Seasons',serif; font-size:2.4rem; margin:0 0 6px; letter-spacing:2px}
+  .subheading{font-family:'Noto Serif Display',serif; color:var(--muted); margin-bottom:16px}
 
-    html,body{height:100%; margin:0; background-image:url('background.jpg'); background-size:cover; background-position:center; background-attachment:fixed; font-family: 'Inter', sans-serif; color:var(--text);}
+  /* nav with center-expand underline */
+  .nav{ display:flex; justify-content:center; gap:28px; margin-bottom:18px; border-bottom:1px solid #e7e2db; padding-bottom:12px }
+  .nav a{ position:relative; text-decoration:none; color:var(--text); padding-bottom:8px; font-weight:500 }
+  .nav a::after{
+    content:''; position:absolute; left:50%; bottom:0; transform:translateX(-50%) scaleX(0);
+    height:2px; width:60%; background:var(--accent-dark); transform-origin:center; transition: transform .28s cubic-bezier(.2,.9,.2,1);
+    border-radius:2px;
+  }
+  .nav a:hover::after, .nav a.active::after{ transform: translateX(-50%) scaleX(1); }
 
-    .container {
-      background: var(--panel);
-      border: 2px solid #d8d1c4;
-      border-radius: 14px;
-      padding: 50px 40px;
-      width: 720px;
-      max-width: 95vw;
-      margin: 60px auto;
-      text-align: center;
-      box-sizing: border-box;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.06);
-      animation: fadeInUp 0.9s ease-out both;
-    }
+  /* intro: italic serif, fade-in stagger */
+  .intro{ font-family:'Noto Serif Display',serif; font-style:italic; color:#4a433c; line-height:1.6; margin:0 0 14px; opacity:0; animation:introIn 700ms ease 120ms forwards }
+  @keyframes introIn{ to{opacity:1} }
 
-    @keyframes fadeInUp {
-      from { opacity: 0; transform: translateY(20px); }
-      to   { opacity: 1; transform: translateY(0); }
-    }
+  .value{ background:var(--soft-bg); border:1px solid #e6ded6; padding:14px; border-radius:10px; color:#5a534b; font-family:'Noto Serif Display',serif; margin:14px 0 22px; font-size:0.95rem; opacity:0; animation:introIn 700ms ease 220ms forwards }
 
-    .logo { width:110px; height:110px; object-fit:contain; display:block; margin:0 auto 18px; }
+  /* step blocks */
+  .step{ background:#fff; border-radius:12px; padding:18px 20px; margin-bottom:16px; box-shadow:0 3px 10px rgba(0,0,0,0.04); text-align:left }
+  .step .label{ font-size:0.78rem; text-transform:uppercase; letter-spacing:1px; color:#8b847b; margin-bottom:6px }
+  .step h2{ font-family:'Noto Serif Display',serif; margin:6px 0 8px; color:#35302b; font-size:1.1rem }
+  .step p{ color:#5a534b; margin:0 0 12px; line-height:1.45 }
 
-    h1 { margin:0 0 8px 0; font-family: 'The Seasons', serif; font-size:2.6rem; letter-spacing:2px; font-weight:600; color:#000; }
-    .subheading { font-family: 'Noto Serif Display', serif; font-size:1rem; color:var(--muted); margin-bottom:18px; }
+  /* Buttons */
+  .cta{ display:inline-block; width:100%; padding:12px 14px; border-radius:10px; text-decoration:none; font-weight:600; font-size:1rem; text-align:center; transition:transform .15s ease, box-shadow .15s ease }
+  .cta:active{ transform:translateY(1px) }
+  .cta-primary{ background:var(--btn-brown); color:var(--text); border:none; box-shadow:0 2px 8px rgba(0,0,0,0.04) }
+  .cta-primary:hover{ transform:translateY(-3px); box-shadow:0 6px 18px rgba(0,0,0,0.06) }
+  .cta-outline{ background:transparent; border:1.25px solid #d6d0c7; color:var(--text) }
+  .cta-outline:hover{ background:rgba(0,0,0,0.02); transform:translateY(-2px) }
 
-    /* intro paragraph — italic like you wanted */
-    .intro {
-      font-family: 'Noto Serif Display', serif;
-      font-style: italic;
-      font-size:0.98rem;
-      color:#4a433c;
-      margin-bottom:20px;
-      line-height:1.6;
-    }
+  /* Explore buttons — stacked, centered, accent for template library */
+  .explore-list{ display:flex; flex-direction:column; gap:10px; margin-top:6px; }
+  .explore-list a{ padding:12px; border-radius:10px; text-decoration:none; color:var(--text); border:1px solid #eee; background:#fff; font-weight:600; display:block; text-align:center }
+  .explore-library{ background:var(--btn-brown); border:none }
+  .explore-library:hover{ background:var(--accent-dark); color:#fff }
 
-    .value {
-      background: var(--soft);
-      border:1px solid #e6ded6;
-      padding:14px;
-      border-radius:10px;
-      color:#5a534b;
-      font-family:'Noto Serif Display', serif;
-      margin-bottom:26px;
-    }
+  .follow-note{ margin-top:10px; font-size:0.92rem; color:#7b756f; }
 
-    /* top nav */
-    .nav { display:flex; justify-content:center; gap:28px; margin-bottom:18px; border-bottom:1px solid #e7e2db; padding-bottom:12px; }
-    .nav a { color:var(--text); text-decoration:none; font-weight:500; position:relative; padding-bottom:6px; }
-    .nav a.active::after{ content:''; position:absolute; left:0; bottom:-2px; height:2px; width:100%; background:#bfa98e; border-radius:2px; }
+  /* responsive fixes: prevent sideways expansion, center on mobile */
+  @media (max-width:640px){
+    .container{ width:92vw; padding:36px 20px; margin:28px auto }
+    .logo{ width:90px; height:90px }
+    .explore-list a{ width:100% }
+  }
 
-    /* step sections (keeps your original block look but clearer spacing) */
-    .step { text-align:left; background: white; padding:20px 22px; border-radius:12px; margin-bottom:18px; box-shadow:0 3px 10px rgba(0,0,0,0.04); }
-    .step .label { font-family: Inter, sans-serif; font-size:0.78rem; text-transform:uppercase; letter-spacing:1px; color:#8b847b; margin-bottom:6px; }
-    .step h2 { margin:6px 0 8px 0; font-family:'Noto Serif Display', serif; font-size:1.15rem; color:#35302b; }
-    .step p { margin:0 0 12px 0; color:#5a534b; font-size:0.95rem; line-height:1.45; }
-
-    /* CTA buttons (wider spacing) */
-    .cta { display:block; width:100%; text-align:center; padding:12px 14px; border-radius:10px; text-decoration:none; font-weight:600; margin-top:6px; display:inline-block; }
-    .cta-primary { background:var(--accent); color:#121212; border: none; }
-    .cta-outline { background:transparent; border:1.4px solid #d1c7bd; color:#3a3a3a; }
-
-    /* Explore group buttons layout */
-    .explore-grid { display:flex; gap:12px; flex-wrap:wrap; margin-top:6px; }
-    .explore-grid a { flex:1 1 calc(33.333% - 8px); min-width:140px; text-decoration:none; padding:10px; border-radius:8px; border:1px solid #eee; color:#3a3a3a; background:#fff; font-weight:500; }
-
-    /* small helper text under the explore */
-    .follow-note { margin-top:10px; font-size:0.9rem; color:#7b756f; }
-
-    footer { margin-top:20px; font-family:'Noto Serif Display', serif; color:#7a746e; font-size:0.9rem; }
-
-    /* responsive */
-    @media (max-width:640px){
-      .container{ padding:36px 20px; width:92vw; margin:28px auto; }
-      h1{ font-size:2.1rem; }
-      .explore-grid a{ flex-basis:100%; }
-    }
-  </style>
+  /* small accessibility / focus */
+  a:focus{ outline:3px solid rgba(191,169,142,0.15); outline-offset:3px; }
+</style>
 </head>
 <body>
-
-  <div class="container">
-    <!-- logo + header -->
-    <img class="logo" src="Black%20Circle%20Modern%20Nails%20Studio%20Logo.png" alt="Fleura Co logo" />
-    <h1>Fleura Co</h1>
+  <div class="container" role="main" aria-labelledby="brand-title">
+    <img class="logo" src="Black%20Circle%20Modern%20Nails%20Studio%20Logo.png" alt="Fleura Co logo">
+    <h1 id="brand-title">Fleura Co</h1>
     <div class="subheading">soft productivity • digital systems • intentional living</div>
 
-    <!-- nav (top) -->
-    <div class="nav">
+    <!-- top nav -->
+    <nav class="nav" aria-label="Main navigation">
       <a href="index.html" class="active">Home</a>
       <a href="product.html">Free Templates</a>
-    </div>
+    </nav>
 
-    <!-- intro (restored wording you liked) -->
+    <!-- intro (fades in) -->
     <p class="intro">Welcome to Fleura Co 🌷
       A calm space for soft productivity, mindful organisation, and beautiful digital systems. Discover thoughtfully designed Notion templates and tools to help you plan, reset, and stay grounded with ease.
     </p>
 
-    <!-- small value bubble -->
     <div class="value">Tools for gentle planning, weekly resets, clarity, and slow intentional growth.</div>
 
-    <!-- STEP 1 -->
-    <div class="step">
+    <!-- STEP 1: Newsletter first (swapped) -->
+    <section class="step" aria-labelledby="step-two">
       <div class="label">Step 1</div>
-      <h2>🌿 Explore free planners</h2>
-      <p>Download gentle, ready-to-use templates to reset your week and organise your days.</p>
-      <!-- link to your product page / kit landing -->
-      <a class="cta cta-primary" href="product.html">Download the Weekly Reset (Free)</a>
-    </div>
+      <h2 id="step-two">💌 Join the Weekly Newsletter</h2>
+      <p>Gentle insights, reset tips, and soft productivity reads delivered with calm intention.</p>
+      <a href="https://fleuraco.substack.com/" target="_blank" rel="noopener" class="cta cta-outline">Join the Weekly Newsletter</a>
+    </section>
 
-    <!-- STEP 2 -->
-    <div class="step">
+    <!-- STEP 2: Free template -->
+    <section class="step" aria-labelledby="step-one">
       <div class="label">Step 2</div>
-      <h2>💌 Join the Weekly Newsletter</h2>
-      <p>Gentle insights, reset tips, and soft productivity reads delivered to your inbox.</p>
-      <!-- substack join -->
-      <a class="cta cta-outline" href="https://fleuraco.substack.com/" target="_blank" rel="noopener">Join the Newsletter</a>
-    </div>
+      <h2 id="step-one">🌿 Free: Weekly Reset Template</h2>
+      <p>A simple, calming system to reset your week with clarity.</p>
+      <a href="product.html" class="cta cta-primary">Claim your free Weekly Reset Planner</a>
+    </section>
 
-    <!-- STEP 3 -->
-    <div class="step">
+    <!-- STEP 3: Explore (stacked, centered) -->
+    <section class="step" aria-labelledby="step-three">
       <div class="label">Step 3</div>
-      <h2>✨ Explore</h2>
-      <p style="margin-bottom:8px;">More ways to browse Fleura Co — templates, daily tips, and visual inspiration. Follow on Instagram for soft productivity and resets.</p>
+      <h2 id="step-three">✨ Explore</h2>
+      <p style="margin-bottom:8px">More ways to browse Fleura Co — explore tools and visual inspiration. Don't forget to follow on Instagram for soft productivity carousels and reset tips ♥</p>
 
-      <div class="explore-grid">
-        <a href="https://fleuraco.gumroad.com/" target="_blank" rel="noopener">Template Library</a>
-        <a href="https://au.pinterest.com/fleuracodigitals/" target="_blank" rel="noopener">Pinterest</a>
-        <a href="https://www.instagram.com/fleuracodigitals/" target="_blank" rel="noopener">Instagram</a>
+      <div class="explore-list">
+        <a href="https://fleuraco.gumroad.com/" target="_blank" rel="noopener" class="explore-library">Template Library — Explore tools to help you plan, organise & reset</a>
+        <a href="https://au.pinterest.com/fleuracodigitals/" target="_blank" rel="noopener">Pinterest — Visual ideas & reset checklists</a>
+        <a href="https://www.instagram.com/fleuracodigitals/" target="_blank" rel="noopener">Instagram — Carousels on soft productivity & routines</a>
+        <a href="https://fleuraco.substack.com/" target="_blank" rel="noopener">Substack — Archive & newsletter</a>
       </div>
-    </div>
 
-    <footer>crafted with care ✿</footer>
+    </section>
+
+    <footer style="font-family:'Noto Serif Display',serif; color:#7a746e; margin-top:12px;">crafted with care ✿</footer>
   </div>
-
 </body>
 </html>
+
 
 
 
