--- a/index.html
+++ b/index.html
@@ -275,12 +275,19 @@
       <a href="https://fleuraco.substack.com/" target="_blank" rel="noopener" class="cta cta-outline">Join the Weekly Newsletter</a>
     </section>
 
-    <!-- STEP 2 -->
-    <section class="step" aria-labelledby="step-one">
+     <!-- STEP 2 (UPDATED) -->
+    <section class="step">
       <div class="label">Step 2</div>
-      <h2 id="step-one">🌿 Free: Weekly Reset Template</h2>
-      <p>A simple, calming system to reset your week with clarity.</p>
-      <a href="product.html" class="cta cta-primary">Claim your free Weekly Reset Planner</a>
+      <h2>🌿 Choose your free reset</h2>
+      <p>Pick a gentle reset that supports clarity, focus, and a softer rhythm to your week.</p>
+
+      <a href="https://fleura-co.kit.com/01a505a79f" class="cta cta-primary" target="_blank">
+        Weekly Reset
+      </a>
+
+      <a href="https://fleura-co.kit.com/b0718b4bd7" class="cta cta-primary" target="_blank" style="margin-top:10px">
+        Clarity Reset
+      </a>
     </section>
 
     <!-- STEP 3 -->
