--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
 <body>
   <div class="container" role="main" aria-labelledby="brand-title">
-    <img class="logo" src="Black%20Circle%20Modern%20Nails%20Studio%20Logo.png" alt="Fleura Co logo">
+    <img class="logo" src="5.png" alt="Fleura Co logo">
 
     <h1 id="brand-title">Fleura Co</h1>
     <div class="subheading">soft productivity • digital systems • intentional living</div>
