--- a/index.html
+++ b/index.html
@@ -50,12 +50,16 @@
   }
 
   .logo{
-    width:110px;
-    height:110px;
-    object-fit:contain;
-    display:block;
-    margin:0 auto 18px;
-  }
+  width:110px;
+  height:110px;
+  object-fit:cover;
+  border-radius:50%;
+  display:block;
+  margin:0 auto 18px;
+  border:2px solid #e6ded6;
+  box-shadow:0 4px 12px rgba(0,0,0,0.05);
+}
+
 
   h1{
     font-family:'The Seasons',serif;
